<resources>
    <string name="app_name">Joker</string>
    <string name="title_home">Home</string>
    <string name="title_Category">Category</string>
    <string name="title_add">Add</string>
    <string name="title_favourite">Favourites</string>
    <string name="title_profile">Profile</string>

    <string name="settings">Settings</string>
    <string name="Top">Top</string>
    <string name="Trend">Trend</string>
    <string name="New">New</string>
    <string name="Abo">Abo</string>

    <string name="EditProfilButton">Edit</string>
    <string name="Followers">Followers</string>
    <string name="Following">Following</string>
    <string name="Username">Username:</string>
    <string name="Rank">Rank:</string>
    <string name="Since">Since:</string>
    <string name="Description">Description:</string>
</resources>
