<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_categorie"
        android:icon="@drawable/ic_category_black_24dp"
        android:title="Categorie"/>


    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_addjoke_black_24dp"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favourite_black_24dp"
        android:title="@string/title_favourite"/>

    <item
        android:id="@+id/navigation_profil"
        android:icon="@drawable/ic_profile_black_24dp"
        android:title="@string/title_profile"/>
</menu>
